k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gpt-hf-service
spec:
  # Change to cluster IP
  #type: NodePort
  type: ClusterIP
  selector:
    app: gpt-hf-pod
  ports:
    - port: 8000
      targetPort: 8000
      # nodePort: 30007
