k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpt-hf-ingress
  namespace: foo
spec:
  ingressClassName: nginx
  rules:
    - host: gpt.167.172.14.0.sslip.io
      http:
        paths:
          - backend:
              service:
                name: gpt-hf-service
                port:
                  number: 80
            path: /
            pathType: Prefix
